--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
       </section>
       <!--===END-OF-COMMENT===-->
 
+        
+      
+
       <div class="replay-container" data-id="1"></div>
       <div class="comment-replay-container" data-id="1"></div>
 
@@ -135,7 +138,7 @@
       <div class="comment-replay-container" data-id="3"></div>
 
       <!--===COMMENT===-->
-    <div class="replay-comment-container">
+    <!-- <div class="replay-comment-container">
       <section class="reply-comment">
         <section class="comment-header">
           <img class="profile-picture" src="./images/avatars/image-juliusomo.png" alt="profile picture">
@@ -161,7 +164,7 @@
           </div>
         </section>
       </section>
-    </div>
+    </div> -->
       <!--===END-OF-COMMENT===-->
     </div>
   </main>
@@ -169,7 +172,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-input">
-        <input type="text" placeholder="Add a comment...">
+        <input type="text" class="input-comment" placeholder="Add a comment...">
       </div>
       <div class="footer-end">
         <img class="profile-picture" src="./images/avatars/image-juliusomo.png" alt="profile picture">
