--- a/index.html
+++ b/index.html
@@ -56,20 +56,17 @@
         </section>
         <section class="comment-footer">
           <div class="rating">
-            <img class="plus-icon" src="./images/icon-plus.svg" alt="plus icon">
+            <img class="plus-icon change-button" data-id="1" src="./images/icon-plus.svg" alt="plus icon">
             <p class="comment-rate">12</p>
-            <img class="minus-icon" src="./images/icon-minus.svg" alt="minus icon">
+            <img class="minus-icon change-button" data-id="1" src="./images/icon-minus.svg" alt="minus icon">
           </div>
           <div class="replay-button" data-id="1">
-            <img class="replay-icon" src="./images/icon-reply.svg" alt="replay icon">
+            <img class="replay-icon" src="./images/icon-reply.svg" alt="">
             <p>replay</p>
           </div>
         </section>
       </section>
       <!--===END-OF-COMMENT===-->
-
-        
-      
 
       <div class="replay-container" data-id="1"></div>
       <div class="comment-replay-container" data-id="1"></div>
@@ -90,12 +87,12 @@
         </section>
         <section class="comment-footer">
           <div class="rating">
-            <img class="plus-icon" src="./images/icon-plus.svg" alt="plus icon">
+            <img class="plus-icon change-button" data-id="2" src="./images/icon-plus.svg" alt="plus icon">
             <p class="comment-rate">5</p>
-            <img class="minus-icon" src="./images/icon-minus.svg" alt="minus icon">
+            <img class="minus-icon change-button" data-id="2" src="./images/icon-minus.svg" alt="minus icon">
           </div>
           <div class="replay-button" data-id="2">
-            <img class="replay-icon" src="./images/icon-reply.svg" alt="replay icon">
+            <img class="replay-icon" src="./images/icon-reply.svg" alt="">
             <p>replay</p>
           </div>
         </section>
@@ -121,12 +118,12 @@
         </section>
         <section class="comment-footer">
           <div class="rating">
-            <img class="plus-icon" src="./images/icon-plus.svg" alt="plus icon">
+            <img class="plus-icon change-button" data-id="3" src="./images/icon-plus.svg" alt="plus icon">
             <p class="comment-rate">4</p>
-            <img class="minus-icon" src="./images/icon-minus.svg" alt="minus icon">
+            <img class="minus-icon change-button" data-id="3" src="./images/icon-minus.svg" alt="minus icon">
           </div>
           <div class="replay-button" data-id="3">
-            <img class="replay-icon" src="./images/icon-reply.svg" alt="replay icon">
+            <img class="replay-icon" src="./images/icon-reply.svg" alt="">
             <p>replay</p>
           </div>
         </section>
@@ -150,10 +147,6 @@
       </div>
     </div>
   </footer>
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
   <script src="./src/app.js"></script>
 </body>
 </html>
